# LEDDisplayBoard

./: .gitignore  BUCK  Final Report.docx  Project Proposal.docx  README.md  rules.bzl
CAD/RinaLEDs/: Board4layer.PcbDoc  Display.SchDoc  LEDs.SchDoc  MCU.SchDoc  PcbLib1.PcbLib  Power.SchDoc  RinaLEDs.PrjPcb  Schlib1.SchLib
CAD/RinaLEDs/Project Outputs for RinaLEDs/: BOM.xlsx  Board4layer-RoundHoles.TXT  Board4layer-SlotHoles.TXT  Board4layer.DRR  Board4layer.EXTREP  Board4layer.G1  Board4layer.G2  Board4layer.GBL  Board4layer.GBO  Board4layer.GBP  Board4layer.GBS  Board4layer.GM1  Board4layer.GM13  Board4layer.GM15  Board4layer.GM21  Board4layer.GM23  Board4layer.GPB  Board4layer.GPT  Board4layer.GTL  Board4layer.GTO  Board4layer.GTP  Board4layer.GTS  Board4layer.LDP  Board4layer.REP  Board4layer.RUL  Board4layer.apr  CPL.xlsx
CAD/RinaLEDs/Project Outputs for RinaLEDs/cad/: Board4layer.step
CAD/RinaLEDs/__Previews/: Display.SchDocPreview  LEDs.SchDocPreview  MCU.SchDocPreview  Power.SchDocPreview
Software/RinaBitBang.X/: Makefile  drv_nrf24l01.c  drv_nrf24l01.h  drv_ws2812b.c  drv_ws2812b.h  images.h  images.s  main.c
Software/RinaBitBang.X/images/: build.py
Software/RinaBitBang.X/nbproject/: configurations.xml  project.xml
Software/Transmitter/: Transmitter.ino
Software/boot/: BUCK  CMakeLists.txt  drv_adc.c  drv_adc.h  drv_nrf24l01.c  drv_nrf24l01.h  drv_supc.c  drv_supc.h  drv_ws2812b.c  main.c  openocd.cfg
Software/boot/cmake/: toolchain-arm-none-eabi.cmake
Software/boot/images/: BUCK  CMakeLists.txt  build.py  rules.bzl  template.xcf  tx.py
toolchains/: BUCK  cxx.bzl  gnu_toolchain.bzl
